--- a/Kubernetes/nginx-multi/nginx-service.yaml
+++ b/Kubernetes/nginx-multi/nginx-service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: my-nginx
   ports:
   - port: 80
     targetPort: 80
+    nodePort: 30080
